z-index fixed

--- a/src/app/components/shared/pokemon-card/pokemon-card.component.css
+++ b/src/app/components/shared/pokemon-card/pokemon-card.component.css
@@ -180,7 +180,7 @@
     transition: transform 0.5s ease;
     animation: floatUpDown 3s ease-in-out infinite;
     animation-delay: 0.5s;
-    z-index: 40;
+    z-index: 999;
 }
 
 @keyframes floatUpDown {
@@ -251,7 +251,7 @@
 .pokemonCard__typesWrapper {
     position: absolute;
     right: 2%;
-    bottom: 1%;
+    bottom: 2%;
     z-index: 30;
     pointer-events: none;
     transform: scale(1);
